php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #60033 Incorrectly merged PDO dblib patches break uniqueidentifier column type
Submitted: 2011-10-10 22:23 UTC Modified: 2011-10-12 01:24 UTC
From: warezthebeef at gmail dot com Assigned: felipe (profile)
Status: Closed Package: PDO related
PHP Version: trunk-SVN-2011-10-10 (SVN) OS: Linux
Private report: No CVE-ID: None
 [2011-10-10 22:23 UTC] warezthebeef at gmail dot com
Description:
------------
The following patches have been merged into trunk

https://bugs.php.net/bug.php?id=50755
https://bugs.php.net/bug.php?id=54167

However they're slightly incompatible, #50755 changed the structure of the dbconvert() calls and when the merge was made the patch from #54167 wasn't updated to reflect this.

With the attached patch applied the trunk driver is working great.

5.3.x is fine as the changes from #50755 aren't in that branch yet.

Test script:
---------------
Simply query any uniqueidentifier column value, the wrong value is returned.

Expected result:
----------------
The correct value for uniqueidentifier is returned.

Actual result:
--------------
An unrelated sequence of bytes is encoded and returned instead of the expected uniqueidentifier.

Patches

dblib_stmt.diff (last revision 2011-10-10 22:24 UTC by warezthebeef at gmail dot com)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-10-10 22:26 UTC] warezthebeef at gmail dot com
-Summary: Incorrectly merged patches break uniqueidentifier column type +Summary: Incorrectly merged PDO dblib patches break uniqueidentifier column type
 [2011-10-10 22:26 UTC] warezthebeef at gmail dot com
Just clarifying that this bug report/patch applies to the dblib driver
 [2011-10-12 01:24 UTC] felipe@php.net
Automatic comment from SVN on behalf of felipe
Revision: http://svn.php.net/viewvc/?view=revision&revision=318042
Log: - Fixed bug #60033 (Incorrectly merged PDO dblib patches break uniqueidentifier column type)
 [2011-10-12 01:24 UTC] felipe@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: felipe
 [2011-10-12 01:24 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-18 09:48 UTC] laruence@php.net
Automatic comment on behalf of felipe
Revision: http://git.php.net/?p=php-src.git;a=commit;h=31d213930dec5015f8f7a2d37f281d5217c4f051
Log: - Fixed bug #60033 (Incorrectly merged PDO dblib patches break uniqueidentifier column type)
 [2012-07-24 23:39 UTC] rasmus@php.net
Automatic comment on behalf of felipe
Revision: http://git.php.net/?p=php-src.git;a=commit;h=31d213930dec5015f8f7a2d37f281d5217c4f051
Log: - Fixed bug #60033 (Incorrectly merged PDO dblib patches break uniqueidentifier column type)
 [2013-11-17 09:36 UTC] laruence@php.net
Automatic comment on behalf of felipe
Revision: http://git.php.net/?p=php-src.git;a=commit;h=31d213930dec5015f8f7a2d37f281d5217c4f051
Log: - Fixed bug #60033 (Incorrectly merged PDO dblib patches break uniqueidentifier column type)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC