- Fixed bug #60033 (Incorrectly merged PDO dblib patches break uniqueidentifier column type)